--- a/css/mapfiddle.css
+++ b/css/mapfiddle.css
@@ -1,3 +1,12 @@
+/*
+     http://angular-ui.github.io/bootstrap/
+     Original Bootstrap's CSS depends on empty href attributes to style cursors for several components
+     (pagination, tabs etc.). But in AngularJS adding empty href attributes to link tags will cause unwanted
+     route changes. This is why we need to remove empty href attributes from directive templates and as a result
+     styling is not applied correctly. The remedy is simple, just add the following styling to your application:
+ */
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
 .fixed {
     width: 200px;
     float: left;
@@ -8,7 +17,7 @@
     overflow: hidden;
 }
 
-#run {
+header button {
     margin-top: 8px;
 }
 
