--- a/templates/option-checkbox.html
+++ b/templates/option-checkbox.html
@@ -1,2 +1,2 @@
 <input ng-model="options.panControl.value" ng-change="updateMap()" type="checkbox" class="add-on mapoption-checkbox">
-<span>Pan Control: {{options.panControl.value}}</a></span>
+<span>Pan Control: {{options.panControl.value}}</span>
