--- a/templates/option-checkbox.html
+++ b/templates/option-checkbox.html
@@ -1,2 +1,6 @@
-<input ng-model="options.panControl.value" ng-change="updateMap()" type="checkbox" class="add-on mapoption-checkbox">
-<span>Pan Control: {{options.panControl.value}}</span>
+<div class="checkbox">
+    <label>
+        <input ng-model="item.value" ng-change="$parent.updateMap()" type="checkbox" class="add-on mapoption-checkbox">
+        {{item.label}}
+    </label>
+</div>
