Added event to options service to update map when change is made on sidebar.

--- a/templates/option-range.html
+++ b/templates/option-range.html
@@ -1,2 +1,2 @@
 <label>{{item.label}}: {{item.value}}</label>
-<input ng-model="item.value" ng-change="$parent.reflectSidebarChangesToMap()" min="{{item.min}}" max="{{item.max}}" type="range" class="add-on mapoption-range">
+<input ng-model="item.value" ng-change="$parent.changeHandler(item)" min="{{item.min}}" max="{{item.max}}" type="range" class="add-on mapoption-range">
