--- a/partials/code-view.html
+++ b/partials/code-view.html
@@ -1,1 +1,1 @@
-<pre ng-repeat="section in sections" class="prettyprint">{{section}}</pre>
+<pre><span ng-repeat="section in sections">{{section}}</span></pre>
