added buttons to data tab

--- a/partials/data.html
+++ b/partials/data.html
@@ -1,3 +1,5 @@
 <div class="panel-body">
-    Add Markers, circles, polygons, popups
+    <button class="btn btn-danger btn-full-width" ng-click="toggleFeature('marker')">Add Marker</button>
+    <button class="btn btn-danger btn-full-width" ng-click="toggleFeature('circle')">Add Circle</button>
+    <button class="btn btn-danger btn-full-width" ng-click="toggleFeature('polygon')">Add Polygon</button>
 </div>
