--- a/partials/data.html
+++ b/partials/data.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
-    <button class="btn btn-danger btn-full-width" ng-click="toggleFeature('marker')">Add Marker</button>
-    <button class="btn btn-danger btn-full-width" ng-click="toggleFeature('circle')">Add Circle</button>
-    <button class="btn btn-danger btn-full-width" ng-click="toggleFeature('polygon')">Add Polygon</button>
+    <button class="btn btn-full-width" ng-click="toggleFeature('marker')">Add Marker</button>
+    <button class="btn btn-full-width" ng-click="toggleFeature('circle')">Add Circle</button>
+    <button class="btn btn-full-width" ng-click="toggleFeature('polygon')">Add Polygon</button>
 </div>
