--- a/partials/about.html
+++ b/partials/about.html
@@ -1,3 +1,3 @@
 <div class="panel-body">
-    MapFiddle was created to promote the use of maps by making it even easier to create a map!
+    MapFiddle was created to promote the use of maps by making the process as simple as possible.
 </div>
