--- a/partials/features.html
+++ b/partials/features.html
@@ -1,5 +1,11 @@
 <div class="panel-body">
-    <button class="btn btn-full-width" ng-click="changeHandler('marker')">Add Marker</button>
-    <button class="btn btn-full-width" ng-click="changeHandler('circle')">Add Circle</button>
-    <button class="btn btn-full-width" ng-click="changeHandler('polygon')">Add Polygon</button>
+    <form role="form" class="">
+        <div class="form-group" ng-repeat="feature in features">
+            <button class="btn btn-full-width" ng-click="broadcastChangedFeature(feature.name)">Add {{ feature.name }}</button>
+            <div ng-show="feature.obj != null">
+                <label for="markerPopup">Include {{ feature.name }} popup</label>
+                <input id="markerPopup" type="checkbox" ng-model="popupEnabled" ng-checked="feature.popupEnabled" ng-change="broadcastChangedFeaturePopup(feature.name)">
+            </div>
+        </div>
+    </form>
 </div>
