--- a/partials/events.html
+++ b/partials/events.html
@@ -1,7 +1,7 @@
 <div class="panel-body">
     <form role="form" class="">
         <div class="form-group" ng-repeat="event in events">
-            <button class="btn btn-full-width" ng-click="broadcastChangedEvent(event.name)">Add {{ event.name }}</button>
+            <button class="btn btn-full-width" ng-click="broadcastChangedEvent(event.name)">Add {{ event.label }}</button>
         </div>
     </form>
 </div>
