have made initial ui updates

--- a/templates/option-checkbox.html
+++ b/templates/option-checkbox.html
@@ -1,6 +1,6 @@
 <div class="checkbox">
     <label>
-        <input ng-model="item.value" ng-change="$parent.changeHandler(item)" type="checkbox" class="add-on mapoption-checkbox">
+        <input ng-model="item.value" ng-change="$parent.changeHandler(item)" type="checkbox">
         {{item.label}}
     </label>
 </div>
