--- a/partials/features.html
+++ b/partials/features.html
@@ -1,10 +1,12 @@
 <div class="panel-body">
-    <form role="form" class="">
+    <form role="form">
         <div class="form-group" ng-repeat="feature in features">
-            <button class="btn btn-full-width" ng-click="broadcastChangedFeature(feature.name)">Add {{ feature.name }}</button>
-            <div ng-show="feature.obj != null">
-                <label for="markerPopup">Include {{ feature.name }} popup</label>
-                <input id="markerPopup" type="checkbox" ng-model="feature.popupEnabled" ng-checked="feature.popupEnabled" ng-change="broadcastChangedFeaturePopup(feature.name)">
+            <button class="btn btn-full-width" ng-click="broadcastChangedFeature(feature.name)">{{ feature.obj == null ? "Add" : "Remove" }} {{ feature.name }}</button>
+            <div >
+                <label for="markerPopup" ng-disabled="feature.obj == null">
+                    <input id="markerPopup" type="checkbox" ng-disabled="feature.obj == null" ng-model="feature.popupEnabled" ng-checked="feature.popupEnabled" ng-change="broadcastChangedFeaturePopup(feature.name)">
+                    Show popup when {{ feature.name }} is clicked.
+                </label>
             </div>
         </div>
     </form>
