removed zoomend event and finished fixed adding events to mapService

--- a/partials/events.html
+++ b/partials/events.html
@@ -4,4 +4,5 @@
             <button class="btn btn-full-width" ng-click="broadcastChangedEvent(event.name)">{{ event.enabled ? "Remove" : "Add" }} {{ event.label }}</button>
         </div>
     </form>
+    <div class="alert alert-info" role="alert">Check out all map events in <a target="_blank" href="http://leafletjs.com/reference.html#map-events">Leaflet's official documentation</a>.</div>
 </div>
