--- a/partials/features.html
+++ b/partials/features.html
@@ -3,7 +3,7 @@
         <div class="form-group" ng-repeat="feature in features">
             <button class="btn btn-full-width" ng-click="broadcastChangedFeature(feature.name)">{{ feature.obj == null ? "Add" : "Remove" }} {{ feature.name }}</button>
             <div >
-                <label for="markerPopup" ng-disabled="feature.obj == null">
+                <label for="markerPopup" ng-class="{ 'text-muted': feature.obj == null }">
                     <input id="markerPopup" type="checkbox" ng-disabled="feature.obj == null" ng-model="feature.popupEnabled" ng-checked="feature.popupEnabled" ng-change="broadcastChangedFeaturePopup(feature.name)">
                     Show popup when {{ feature.name }} is clicked.
                 </label>
