removed prettify.css (not used), added css to remove outline of clicked button

--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,10 @@ body {
 .force-square {
     border-radius: 0 !important;
 }
+div.panel-body ol {
+    padding-left: 20px;
+}
+
+.no-outline:focus {
+    outline: none;
+}
