--- a/partials/about.html
+++ b/partials/about.html
@@ -1,3 +1,17 @@
 <div class="panel-body">
-    MapFiddle was created to promote the use of maps by making the process as simple as possible.
+    <p>MapFiddle was created to promote the use of maps by making the process of creating one as simple as possible.</p>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h5 class="panel-title">How to use MapFiddle</h5>
+        </div>
+        <div class="panel-body">
+            <ol>
+                <li>Use the menu to choose the options you want to include and not include on your map</li>
+                <li>Zoom and center the map to the desired location</li>
+                <li>Click the HTML + Javascript button to get the code to make the map.</li>
+            </ol>
+
+            <p>The HTML and JavaScript displayed in the output window can be copy/pasted into a lone .html file for a fully working map.</p>
+        </div>
+    </div>
 </div>
