modified gulp file to make default task the normal build process

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,6 @@
 <div class="panel-body">
     <p>MapFiddle was created to promote the use of maps by making the process of creating one as simple as possible.</p>
+    <p>It's intended audience is anyone who needs to include a map on their own website. MapFiddle simplifies the "getting started" phase by providing the HTML, CSS and JavaScript needed for a basic map.</p>
     <div class="panel panel-default">
         <div class="panel-heading">
             <h5 class="panel-title">How to use MapFiddle</h5>
@@ -10,7 +11,6 @@
                 <li>Zoom and center the map to the desired location</li>
                 <li>Click the HTML + Javascript button to get the code to make the map.</li>
             </ol>
-
             <p>The HTML and JavaScript displayed in the output window can be copy/pasted into a lone .html file for a fully working map.</p>
         </div>
     </div>
