--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -12,6 +12,7 @@
                 <li>Click the HTML + Javascript button to get the code to make the map.</li>
             </ol>
             <p>The HTML and JavaScript displayed in the output window can be copy/pasted into a lone .html file for a fully working map.</p>
+            <p>This project is open source and can be found on <a target="_blank" href="https://github.com/rosay/mapfiddle">GitHub</a></p>
         </div>
     </div>
 </div>
