--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,9 +1,9 @@
 <div class="panel-body">
-    <p>MapFiddle was created to promote the use of maps by making the process of creating one as simple as possible.</p>
-    <p>It's intended audience is anyone who needs to include a map on their own website. MapFiddle simplifies the "getting started" phase by providing the HTML, CSS and JavaScript needed for a basic map.</p>
+    <p>Mapstrap was created to promote the use of maps by making the process of creating one as simple as possible.</p>
+    <p>It's intended audience is anyone who needs to include a map on their own website. Mapstrap simplifies the "getting started" phase by providing the HTML, CSS and JavaScript needed for a basic map.</p>
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h5 class="panel-title">How to use MapFiddle</h5>
+            <h5 class="panel-title">How to use Mapstrap</h5>
         </div>
         <div class="panel-body">
             <ol>
@@ -12,7 +12,7 @@
                 <li>Click the HTML + Javascript button to get the code to make the map.</li>
             </ol>
             <p>The HTML and JavaScript displayed in the output window can be copy/pasted into a lone .html file for a fully working map.</p>
-            <p>This project is open source and can be found on <a target="_blank" href="https://github.com/rosay/mapfiddle">GitHub</a></p>
+            <p>This project is open source and can be found on <a target="_blank" href="https://github.com/rosay/Mapstrap">GitHub</a></p>
         </div>
     </div>
 </div>
