added documentation feature and have data living in the feature services

--- a/src/templates/options.html
+++ b/src/templates/options.html
@@ -9,5 +9,5 @@
             </div>
         </form>
     </div>
-    <div class="alert alert-info" role="alert">There are many more options in <a target="_blank" href="http://leafletjs.com/reference.html#map-options">Leaflet's official documentation</a>.</div>
+    <doc-box></doc-box>
 </div>
