--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,3 +42,39 @@ div.panel-body ol {
 .no-outline:focus {
     outline: none;
 }
+
+#select-map {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+#select-map > ul {
+    position: absolute;
+    z-index: 1000;
+    min-width: 260px;
+    padding: 5px 0;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
+
+#select-map li > a:hover, #select-map li > a:focus {
+    color: #262626 !important;
+    text-decoration: none !important;
+    background-color: #f5f5f5 !important;
+}
+
+#select-map li > a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
