--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,13 +1,12 @@
 <div class="panel-body">
-    <p>Mapstrap was created to promote the use of maps by making the process of creating one as simple as possible.</p>
-    <p>It's intended audience is anyone who needs to include a map on their own website. Mapstrap simplifies the "getting started" phase by providing the HTML, CSS and JavaScript needed for a basic map.</p>
+    <p>Mapstrap was created to assist developers by providing much of the boilerplate code needed to create a web map. As well as providing working documentation for often used map features.</p>
     <div class="panel panel-default">
         <div class="panel-heading">
             <h5 class="panel-title">How to use Mapstrap</h5>
         </div>
         <div class="panel-body">
             <ol>
-                <li>Use the menu to choose the options you want to include and not include on your map</li>
+                <li>Play with Options, Features and Events</li>
                 <li>Zoom and center the map to the desired location</li>
                 <li>Click the HTML + Javascript button to get the code to make the map.</li>
             </ol>
