--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,7 +23,10 @@ html, body {
      padding: 0;
  }
 #logo {
-    opacity: .7
+	font-size: 30px;
+	text-align: center;
+    opacity: .7;
+	margin-bottom: 5px;
 }
 
 .app-front {
@@ -44,7 +47,6 @@ div.panel-body ol {
 }
 
 #select-map {
-    margin-top: 20px;
     margin-bottom: 10px;
 }
 
