--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
-    <p>Mapstrap was created to assist developers by providing much of the boilerplate code needed to create a web map. As well as providing working documentation for often used map features.</p>
+    <p>Mapstrap was created to assist developers by providing the boilerplate code needed to create a web map. It also acts as live documentation for often used map features.</p>
     <div class="panel panel-default">
         <div class="panel-heading">
             <h5 class="panel-title">How to use Mapstrap</h5>
